// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store Properties and getters basic 1`] = `
Object {
  "numDaysBack": 40,
  "showBrowser": false,
}
`;

exports[`Store Properties and getters exporters 1`] = `
Array [
  Object {
    "active": true,
    "companyId": "csv",
    "displayName": "אקסל",
    "id": "csv",
    "logo": "excel.png",
    "logs": Array [],
    "options": Object {
      "filePath": "transaction.csv",
    },
    "status": "IDLE",
    "type": "Exporter",
  },
  Object {
    "active": false,
    "companyId": "json",
    "displayName": "Json",
    "id": "json",
    "logo": "json.jpeg",
    "logs": Array [],
    "options": Object {
      "filePath": "transaction.json",
    },
    "status": "IDLE",
    "type": "Exporter",
  },
  Object {
    "active": true,
    "companyId": "ynab",
    "displayName": "Ynab",
    "id": "ynab",
    "logo": "ynab.jpeg",
    "logs": Array [],
    "options": Object {
      "accessToken": "################-######-####-###",
      "accountNumbersToYnabAccountIds": Object {
        "1111": "xcvxcvxcvsd",
        "3333": "xvxcdv",
        "5555": "asdvasdvsdvs",
        "555555555": "vsdvsdvserverv",
      },
      "budgetId": "advasdvasd-asdvasdva-sdvasdvasdv-asdvasdvf",
    },
    "status": "IDLE",
    "type": "Exporter",
  },
  Object {
    "active": false,
    "companyId": "googleSheets",
    "displayName": "Google Sheets",
    "id": "googleSheets",
    "logo": "sheets.png",
    "logs": Array [],
    "options": Object {
      "credentials": "",
      "spreadsheetId": "",
    },
    "status": "IDLE",
    "type": "Exporter",
  },
]
`;

exports[`Store Properties and getters importers 1`] = `
Object {
  "active": true,
  "companyId": "discount",
  "displayName": "דיסקונט",
  "id": "efsvxasgd416f94d1e45a9cfc8c0a95f",
  "loginFields": Object {
    "id": "234234134",
    "num": "LY9999",
    "password": "notARealPass",
  },
  "logo": "discount.jpeg",
  "logs": Array [],
  "status": "IDLE",
  "type": "Importer",
}
`;

exports[`Store Properties and getters importers 2`] = `
Object {
  "active": true,
  "companyId": "visaCal",
  "displayName": "ויזה כאל",
  "id": "794a9ksj532d86cb4xxxb3438d0da942",
  "loginFields": Object {
    "password": "somePassword",
    "username": "someUsername",
  },
  "logo": "visa-cal.jpeg",
  "logs": Array [],
  "status": "IDLE",
  "type": "Importer",
}
`;

exports[`Store Properties and getters importers 3`] = `
Object {
  "active": true,
  "companyId": "max",
  "displayName": "Max",
  "id": "9xve2485ac202f53f85bcdb4f795dssc",
  "loginFields": Object {
    "password": "greatPass",
    "username": "whatAUserName",
  },
  "logo": "max.jpg",
  "logs": Array [],
  "status": "IDLE",
  "type": "Importer",
}
`;

exports[`Store actions importers addImporter 1`] = `
Object {
  "active": false,
  "companyId": "hapoalim",
  "displayName": "הפועלים",
  "id": "moshe",
  "loginFields": Object {
    "username": "david",
  },
  "logo": "poalim.jpeg",
  "logs": Array [],
  "status": "IDLE",
  "type": "Importer",
}
`;
